docs: add guides page to the website

--- a/website/locales/es.yaml
+++ b/website/locales/es.yaml
@@ -1,4 +1,5 @@
 and_you_can_see_the_source_code_at: Y puedes ver el código fuente en
 change_language: Cambiar idioma
+guides: Guias
 home: Inicio
 this_website_was_made_with: Este sitio web fue hecho con
