docs: add components page to the website

--- a/website/locales/en.yaml
+++ b/website/locales/en.yaml
@@ -1,5 +1,6 @@
 and_you_can_see_the_source_code_at: And you can see the source code at
 change_language: Change language
+components: Components
 guides: Guides
 home: Home
 this_website_was_made_with: This website was made with
