feat: add highlight.js for code examples

--- a/website/locales/en.yaml
+++ b/website/locales/en.yaml
@@ -5,4 +5,4 @@ guides: Guides
 home: Home
 this_website_was_made_with: This website was made with
 to_find_more_information_you_can_go_to: To find more information, you can go to
-to_find_more_information_you_can_check_the_official_bulma_documentation: To find more information, you can check the official Bulma documentation
+additionally_you_can_check_bulma_official_documentation: Additionally, you can check Bulma official documentation
