--- a/website/locales/es.yaml
+++ b/website/locales/es.yaml
@@ -5,4 +5,4 @@ guides: Guias
 home: Inicio
 this_website_was_made_with: Este sitio web fue hecho con
 to_find_more_information_you_can_go_to: Para encontrar más información, puedes ir a
-to_find_more_information_you_can_check_the_official_bulma_documentation: Para encontrar más información, puedes ver la documentación oficial de Bulma
+additionally_you_can_check_bulma_official_documentation: Adicionalmente, puedes consultar la documentación oficial de Bulma
