--- a/website/locales/en.yaml
+++ b/website/locales/en.yaml
@@ -1,6 +1,7 @@
 and_you_can_see_the_source_code_at: And you can see the source code at
 change_language: Change language
 components: Components
+form: Form
 guides: Guides
 home: Home
 this_website_was_made_with: This website was made with
