feat: add an elements page on the website

--- a/website/locales/en.yaml
+++ b/website/locales/en.yaml
@@ -1,6 +1,7 @@
 and_you_can_see_the_source_code_at: And you can see the source code at
 change_language: Change language
 components: Components
+elements: Elements
 form: Form
 guides: Guides
 home: Home
