--- a/website/locales/es.yaml
+++ b/website/locales/es.yaml
@@ -1,6 +1,7 @@
 and_you_can_see_the_source_code_at: Y puedes ver el código fuente en
 change_language: Cambiar idioma
 components: Componentes
+elements: Elementos
 form: Formulario
 guides: Guias
 home: Inicio
