docs: add columns page on the website

--- a/website/locales/es.yaml
+++ b/website/locales/es.yaml
@@ -1,5 +1,6 @@
 and_you_can_see_the_source_code_at: Y puedes ver el código fuente en
 change_language: Cambiar idioma
+columns: Columnas
 components: Componentes
 elements: Elementos
 form: Formulario
