--- a/website/locales/en.yaml
+++ b/website/locales/en.yaml
@@ -1,5 +1,6 @@
 and_you_can_see_the_source_code_at: And you can see the source code at
 change_language: Change language
+columns: Columns
 components: Components
 elements: Elements
 form: Form
