--- a/website/locales/en.yaml
+++ b/website/locales/en.yaml
@@ -6,6 +6,8 @@ elements: Elements
 form: Form
 guides: Guides
 home: Home
+how_to_install_in_leptos_csr: How to Install in Leptos CSR
+how_to_install_in_leptos_ssr: How to Install in Leptos SSR
 layout: Layout
 this_website_was_made_with: This website was made with
 to_find_more_information_you_can_go_to: To find more information, you can go to
