docs: add customization with Sass section on the website

--- a/website/locales/en.yaml
+++ b/website/locales/en.yaml
@@ -2,6 +2,7 @@ and_you_can_see_the_source_code_at: And you can see the source code at
 change_language: Change language
 columns: Columns
 components: Components
+customization: Customization
 elements: Elements
 form: Form
 guides: Guides
