--- a/website/locales/es.yaml
+++ b/website/locales/es.yaml
@@ -2,6 +2,7 @@ and_you_can_see_the_source_code_at: Y puedes ver el código fuente en
 change_language: Cambiar idioma
 columns: Columnas
 components: Componentes
+customization: Customización
 elements: Elementos
 form: Formulario
 guides: Guias
