docs: move button element to their own page on the website

--- a/website/locales/en.yaml
+++ b/website/locales/en.yaml
@@ -20,6 +20,7 @@ layout: Layout
 see_it_in_action: "See it in action:"
 separators: Separators
 sizes: Sizes
+states: States
 tag: Tag
 this_website_was_made_with: This website was made with
 to_find_more_information_you_can_go_to: To find more information, you can go to
