--- a/website/locales/es.yaml
+++ b/website/locales/es.yaml
@@ -17,8 +17,10 @@ home: Inicio
 how_to_install_in_leptos_csr: Como instalar en Leptos CSR
 how_to_install_in_leptos_ssr: Como instalar en Leptos SSR
 icon: Icono
+indeterminate: Indeterminado
 layout: Layout
-packages: Packages
+packages: Paquetes
+progress: Barra de progreso
 see_it_in_action: "Miralo en acción:"
 separators: Separadores
 states: Estados
